test/LitTests/SemanticAnalysis/Exceptions/RethrowInsideScopeExit.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

// Entry point.
export int testEntryPoint(unused int argc, unused ubyte ** argv) {
	try {
		throw ExampleError(1024);
	} catch (ExampleError error1) {
		scope (exit) {
			// CHECK: .loci:13:4: error: cannot re-throw caught exception inside scope(exit)
			throw;
		}
	}
	return 0;
}

// CHECK: 1 error generated.
